changed the width of the navBar and footer from vw to 100% and it solved the overflowing effect that was disturbing

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,7 +7,7 @@
 .footerDiv {
   background-color: #304f47;
   color: #fff;
-  width: 100vw;
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
