--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -41,7 +41,12 @@
   margin: 0;
 }
 
-@media only screen and (max-width: 600px){
+@media only screen and (max-width: 600px) {
+  .hero {
+    height: 75vh;
+    padding: 0 1rem;
+  }
+
   .hero h3,
   .hero h1 {
     margin: 0 auto;
