--- a/src/home/home.css
+++ b/src/home/home.css
@@ -10,7 +10,7 @@
   background: linear-gradient(#00000070, #00000070, #00000070), url(../images/hero\ bg.png);
   background-size: cover;
   background-position: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   max-height: 795px;
   display: flex;
